deploy/gcp/k8s/platform/web-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gemcode-web-ui
  namespace: gemcode-platform
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: gemcode-web-ui-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: gemcode-web-ui
      port:
        number: 80
